--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<style>
-div {
-  padding: 70px;
-  border: 1px solid #4CAF50;
-}
-</style>
-</head>
-<body>
-
-<div>This element has a padding of 70px.</div>
-
-</body>
+  <head>
+    <title>This is the title of the webpage!</title>
+  </head>
+  <body>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
 </html>
