--- a/index2.html
+++ b/index2.html
@@ -14,73 +14,68 @@
  
 	
 	</script>
-	<br>
-	<br>
-	<button onclick="myFunction1()">1</button>
-	<button onclick="myFunction2()">2</button>
-	<button onclick="myFunction3()">3</button>
-	<button onclick="myFunction4()">4</button>
-	<button onclick="myFunction5()">5</button>
-	<button onclick="myFunction6()">6</button> 
-	<button onclick="myFunction7()">7</button> 
-	<button onclick="myFunction8()">8</button> 
-	<button onclick="myFunction9()">9</button> 
-	<button onclick="myFunction10()">10</button> 
-	<br>
-	<button onclick="myFunction11()">11</button> 
-	<button onclick="myFunction12()">12</button> 
-	<button onclick="myFunction13()">13</button> 
-	<button onclick="myFunction14()">14</button> 
-	<button onclick="myFunction15()">15</button> 
-	<button onclick="myFunction16()">16</button> 
-	<button onclick="myFunction17()">17</button> 
-	<button onclick="myFunction18()">18</button> 
-	<button onclick="myFunction19()">19</button> 
-	<button onclick="myFunction20()">20</button> 
-	<br>
-	<button onclick="myFunction21()">21</button> 
-	<button onclick="myFunction22()">22</button> 
-	<button onclick="myFunction23()">23</button> 
-	<button onclick="myFunction24()">24</button> 
-	<button onclick="myFunction25()">25</button> 
-	<button onclick="myFunction26()">26</button> 
-	<button onclick="myFunction27()">27</button> 
-	<button onclick="myFunction28()">28</button> 
-	<button onclick="myFunction29()">29</button> 
-	<button onclick="myFunction30()">30</button> 
-	<br>
-	<button onclick="myFunction31()">31</button> 
-	<button onclick="myFunction32()">32</button> 
-	<button onclick="myFunction33()">33</button> 
-	<button onclick="myFunction34()">34</button> 
-	<button onclick="myFunction35()">35</button> 
-	<button onclick="myFunction36()">36</button> 
-	<button onclick="myFunction37()">37</button> 
-	<button onclick="myFunction38()">38</button> 
-	<button onclick="myFunction39()">39</button> 
-	<button onclick="myFunction40()">40</button> 
-	<br>
-	<button onclick="myFunction41()">41</button> 
-	<button onclick="myFunction42()">42</button> 
-	<button onclick="myFunction43()">43</button> 
-	<button onclick="myFunction44()">44</button> 
-	<button onclick="myFunction45()">45</button> 
-	<button onclick="myFunction46()">46</button> 
-	<button onclick="myFunction47()">47</button> 
-	<button onclick="myFunction48()">48</button> 
-	<button onclick="myFunction49()">49</button> 
-	<button onclick="myFunction50()">50</button> 
-	<br>
-	<button onclick="myFunction51()">51</button> 
-	<button onclick="myFunction52()">52</button> 
-	<button onclick="myFunction53()">53</button> 
-	<button onclick="myFunction54()">54</button> 
-	<button onclick="myFunction55()">55</button> 
-	<button onclick="myFunction56()">56</button> 
-	<button onclick="myFunction57()">57</button> 
-	<button onclick="myFunction58()">58</button> 
-	<button onclick="myFunction59()">59</button> 
-	<button onclick="myFunction60()">60</button> 
+	<br><br>
+<button onclick="myFunction1()">1</button>  &nbsp; 
+<button onclick="myFunction2()">2</button>  &nbsp; 
+<button onclick="myFunction3()">3</button>  &nbsp; 
+<button onclick="myFunction4()">4</button>  &nbsp; 
+<button onclick="myFunction5()">5</button>  &nbsp; 
+<button onclick="myFunction6()">6</button>  &nbsp; 
+<button onclick="myFunction7()">7</button>  &nbsp; 
+<button onclick="myFunction8()">8</button>  &nbsp; 
+<button onclick="myFunction9()">9</button>  &nbsp; 
+<button onclick="myFunction10()">10</button>  &nbsp; <br><br>
+<button onclick="myFunction11()">11</button>  &nbsp; 
+<button onclick="myFunction12()">12</button>  &nbsp; 
+<button onclick="myFunction13()">13</button>  &nbsp; 
+<button onclick="myFunction14()">14</button>  &nbsp; 
+<button onclick="myFunction15()">15</button>  &nbsp; 
+<button onclick="myFunction16()">16</button>  &nbsp; 
+<button onclick="myFunction17()">17</button>  &nbsp; 
+<button onclick="myFunction18()">18</button>  &nbsp; 
+<button onclick="myFunction19()">19</button>  &nbsp; 
+<button onclick="myFunction20()">20</button>  &nbsp; <br><br>
+<button onclick="myFunction21()">21</button>  &nbsp; 
+<button onclick="myFunction22()">22</button>  &nbsp; 
+<button onclick="myFunction23()">23</button>  &nbsp; 
+<button onclick="myFunction24()">24</button>  &nbsp; 
+<button onclick="myFunction25()">25</button>  &nbsp; 
+<button onclick="myFunction26()">26</button>  &nbsp; 
+<button onclick="myFunction27()">27</button>  &nbsp; 
+<button onclick="myFunction28()">28</button>  &nbsp; 
+<button onclick="myFunction29()">29</button>  &nbsp; 
+<button onclick="myFunction30()">30</button>  &nbsp; <br><br>
+<button onclick="myFunction31()">31</button>  &nbsp; 
+<button onclick="myFunction32()">32</button>  &nbsp; 
+<button onclick="myFunction33()">33</button>  &nbsp; 
+<button onclick="myFunction34()">34</button>  &nbsp; 
+<button onclick="myFunction35()">35</button>  &nbsp; 
+<button onclick="myFunction36()">36</button>  &nbsp; 
+<button onclick="myFunction37()">37</button>  &nbsp; 
+<button onclick="myFunction38()">38</button>  &nbsp; 
+<button onclick="myFunction39()">39</button>  &nbsp; 
+<button onclick="myFunction40()">40</button>  &nbsp; <br><br>
+<button onclick="myFunction41()">41</button>  &nbsp; 
+<button onclick="myFunction42()">42</button>  &nbsp; 
+<button onclick="myFunction43()">43</button>  &nbsp; 
+<button onclick="myFunction44()">44</button>  &nbsp; 
+<button onclick="myFunction45()">45</button>  &nbsp; 
+<button onclick="myFunction46()">46</button>  &nbsp; 
+<button onclick="myFunction47()">47</button>  &nbsp; 
+<button onclick="myFunction48()">48</button>  &nbsp; 
+<button onclick="myFunction49()">49</button>  &nbsp; 
+<button onclick="myFunction50()">50</button>  &nbsp; <br><br>
+<button onclick="myFunction51()">51</button>  &nbsp; 
+<button onclick="myFunction52()">52</button>  &nbsp; 
+<button onclick="myFunction53()">53</button>  &nbsp; 
+<button onclick="myFunction54()">54</button>  &nbsp; 
+<button onclick="myFunction55()">55</button>  &nbsp; 
+<button onclick="myFunction56()">56</button>  &nbsp; 
+<button onclick="myFunction57()">57</button>  &nbsp; 
+<button onclick="myFunction58()">58</button>  &nbsp; 
+<button onclick="myFunction59()">59</button>  &nbsp; 
+<button onclick="myFunction60()">60</button>  &nbsp; <br><br>
+ 
 
 				
 							
