--- a/index4.html
+++ b/index4.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 
+		
   <body>
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
     <div id="player"></div>
@@ -19,7 +20,7 @@
 	
 	</script>
 	<br><br>
-<button onclick="myFunction1()">1</button>  &nbsp; 
+<button class="js-click" onclick="myFunction1()">1</button>  &nbsp; 
 <button onclick="myFunction2()">2</button>  &nbsp; 
 <button onclick="myFunction3()">3</button>  &nbsp; 
 <button onclick="myFunction4()">4</button>  &nbsp; 
