--- a/index5.html
+++ b/index5.html
@@ -6,8 +6,10 @@
 
 	
   <style>
-  .button1 {
-  background-color: #CCC; 
+  .button {
+  background-color: #CCC;
+	  font-size: 16px;
+	  
  
 }
 </style>
