--- a/index5.html
+++ b/index5.html
@@ -44,7 +44,7 @@
 <button class="button" id="7" onclick="myFunction7()">7</button>  &nbsp; 
 <button class="button" id="8" onclick="myFunction8()">8</button>  &nbsp; 
 <button class="button" id="9" onclick="myFunction9()">9</button>  &nbsp; 
-<button class="button" id="10" onclick="myFunction10()">10</button>  &nbsp; <br><br>
+<button class="button" id="10" onclick="myFunction10()">10</button>  &nbsp; 
 <button class="button" id="11" onclick="myFunction11()">11</button>  &nbsp; 
 <button class="button" id="12" onclick="myFunction12()">12</button>  &nbsp; 
 <button class="button" id="13" onclick="myFunction13()">13</button>  &nbsp; 
@@ -64,7 +64,7 @@
 <button class="button" id="27" onclick="myFunction27()">27</button>  &nbsp; 
 <button class="button" id="28" onclick="myFunction28()">28</button>  &nbsp; 
 <button class="button" id="29" onclick="myFunction29()">29</button>  &nbsp; 
-<button class="button" id="30" onclick="myFunction30()">30</button>  &nbsp; <br><br>
+<button class="button" id="30" onclick="myFunction30()">30</button>  &nbsp; 
 <button class="button" id="31" onclick="myFunction31()">31</button>  &nbsp; 
 <button class="button" id="32" onclick="myFunction32()">32</button>  &nbsp; 
 <button class="button" id="33" onclick="myFunction33()">33</button>  &nbsp; 
@@ -84,7 +84,7 @@
 <button class="button" id="47" onclick="myFunction47()">47</button>  &nbsp; 
 <button class="button" id="48" onclick="myFunction48()">48</button>  &nbsp; 
 <button class="button" id="49" onclick="myFunction49()">49</button>  &nbsp; 
-<button class="button" id="50" onclick="myFunction50()">50</button>  &nbsp; <br><br>
+<button class="button" id="50" onclick="myFunction50()">50</button>  &nbsp; 
 <button class="button" id="51" onclick="myFunction51()">51</button>  &nbsp; 
 <button class="button" id="52" onclick="myFunction52()">52</button>  &nbsp; 
 <button class="button" id="53" onclick="myFunction53()">53</button>  &nbsp; 
